// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskComposite renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-composite: 0;
  mask-composite: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: 0;
  mask-composite: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: 0;
  mask-composite: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: 0;
  mask-composite: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskComposite renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-composite: hasnot;
  mask-composite: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: has;
  mask-composite: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: hasnot;
  mask-composite: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: has;
  mask-composite: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskComposite renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-composite: invalid.path.1;
  mask-composite: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: invalid.path.1;
  mask-composite: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: invalid.path.1;
  mask-composite: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: invalid.path.1;
  mask-composite: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskComposite renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-composite: -54881;
  mask-composite: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: -54881;
  mask-composite: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: -42365;
  mask-composite: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: -42365;
  mask-composite: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskComposite renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: July;
    mask-composite: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: August;
    mask-composite: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: September;
    mask-composite: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-composite: November;
    mask-composite: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: July;
    mask-composite: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: August;
    mask-composite: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: September;
    mask-composite: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-composite: November;
    mask-composite: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: May;
    mask-composite: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: June;
    mask-composite: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: April;
    mask-composite: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-composite: November;
    mask-composite: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: May;
    mask-composite: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: June;
    mask-composite: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-composite: April;
    mask-composite: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-composite: November;
    mask-composite: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskComposite renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-composite: July;
    mask-composite: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-composite: August;
    mask-composite: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-composite: September;
    mask-composite: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-composite: November;
    mask-composite: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-composite: August;
    mask-composite: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-composite: July;
    mask-composite: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-composite: August;
    mask-composite: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-composite: September;
    mask-composite: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-composite: November;
    mask-composite: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-composite: August;
    mask-composite: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-composite: January;
    mask-composite: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-composite: December;
    mask-composite: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-composite: April;
    mask-composite: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-composite: May;
    mask-composite: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-composite: June;
    mask-composite: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-composite: January;
    mask-composite: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-composite: December;
    mask-composite: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-composite: April;
    mask-composite: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-composite: May;
    mask-composite: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-composite: June;
    mask-composite: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskComposite renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-composite: 54881;
  mask-composite: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: 54881;
  mask-composite: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: 42365;
  mask-composite: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: 42365;
  mask-composite: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskComposite renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-composite: July;
  mask-composite: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: July;
  mask-composite: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: June;
  mask-composite: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: June;
  mask-composite: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskComposite renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-composite: DarkSlateBlue;
  mask-composite: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: DarkSlateBlue;
  mask-composite: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: DarkSlateBlue;
  mask-composite: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-composite: DarkSlateBlue;
  mask-composite: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
